# alligator

./: LICENSE  README.md  pyproject.toml
alligator/: main.py
