[tool.poetry]
name = "alligator"
version = "0.1.0"
description = "file transfer over tor hidden services"
authors = ["Luna <git@l4.pm>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
stem = "^1.8.0"
requests = {extras = ["socks"], version = "^2.28.0"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
alli = "alligator:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
